--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "formik": "^2.2.9",
     "jquery": "^3.6.0",
     "json-server": "^0.17.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-comparison-slider": "^1.1.0",
+    "react-datepicker": "^4.8.0",
+    "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.5",
     "sass": "^1.53.0",
     "swiper": "^8.2.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
