--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "google-map-react": "^2.2.0",
     "jquery": "^3.6.0",
     "json-server": "^0.17.0",
     "moment": "^2.29.4",
@@ -21,6 +22,7 @@
     "react-datepicker": "^4.8.0",
     "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
